welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: type mismatch;
 found   : Int
 required: java.awt.Color
  setCouleurBrosse((-1+q-2+d.toInt)%w)
                                   ^